# maui-libdavclient

./: .travis.yml  CMakeLists.txt  webdav.pri  webdavclient.pri
lib/: CMakeLists.txt  CardDAV.cpp  CardDAV.hpp  WebDAV.cpp  WebDAV.hpp  WebDAVClient.cpp  WebDAVClient.hpp
lib/dto/: CardDAVResponseItem.cpp  CardDAVResponseItem.hpp  Contact.cpp  Contact.hpp  WebDAVItem.cpp  WebDAVItem.hpp
lib/tests/: CMakeLists.txt  TestLibDAVClient.cpp  TestWebDAVClient.cpp
lib/utils/: CardDAVReply.cpp  CardDAVReply.hpp  Environment.cpp  NetworkHelper.cpp  NetworkHelper.hpp  WebDAVReply.cpp  WebDAVReply.hpp  XMLHelper.cpp  XMLHelper.hpp
